<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/white">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:text="@string/phone_number_title"
            android:textColor="@color/black"
            android:textSize="@dimen/phone_number_title"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/etPhoneNumber"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/et_phone_bg"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:padding="5dp"
                android:layout_weight="1"
                android:ems="10"
                android:textColor="@color/black"
                android:inputType="phone|textNoSuggestions" />

            <Button
                android:id="@+id/btnSend"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:text="@string/send_sms"
                android:textSize="@dimen/send_sms" />
        </LinearLayout>

        <EditText
            android:id="@+id/etAuthNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/et_phone_bg"
            android:layout_margin="10dp"
            android:padding="5dp"
            android:ems="10"
            android:textColor="@color/black"
            android:visibility="gone"
            tools:visibility="visible"
            android:hint="@string/hint_auth_number"
            android:inputType="phone|textNoSuggestions" />

        <TextView
            android:id="@+id/resent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/resending"
            android:visibility="gone"
            tools:visibility="visible"
            android:padding="10dp"
            android:textColor="@color/black"/>

        <Button
            android:id="@+id/btnAuth"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:visibility="gone"
            tools:visibility="visible"
            android:text="@string/btn_auth"
            android:textSize="@dimen/send_sms"/>

    </LinearLayout>


    <RelativeLayout
        android:id="@+id/loader_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true" />
    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>